--- a/start.html
+++ b/start.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>test4 git</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>my start not html file.</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores molestias reprehenderit nostrum, laudantium culpa aut tempore enim autem veritatis illo libero voluptates! Ipsa aliquam ullam, provident adipisci, laborum, praesentium quam nulla ex temporibus soluta amet fuga. Delectus culpa recusandae, architecto nostrum nemo, optio earum consectetur voluptate iste ad, ullam quasi quod molestiae. Placeat tenetur obcaecati assumenda? Unde temporibus ducimus consequuntur veritatis in fugiat, tempore nihil reiciendis libero quas vitae ad nostrum quam tenetur expedita cumque optio commodi incidunt fugit praesentium magnam dolorem adipisci non eius. Voluptatem magni consequatur facilis laborum, aut ea dolorem numquam voluptatibus distinctio molestias itaque corrupti accusamus!</p>
 </body>
 </html>
